# battery_energy_trading

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COVERAGE_REPORT.md  HACS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  SUNGROW_INTEGRATION.md  TEST_IMPROVEMENT_PLAN.md  hacs.json  pyproject.toml  pytest.ini  requirements_test.txt  ruff.toml  todo.md
.github/workflows/: auto-release.yml  release.yml  test.yml  validate.yml
custom_components/battery_energy_trading/: __init__.py  automation_helper.py  base_entity.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  energy_optimizer.py  manifest.json  number.py  sensor.py  services.yaml  sungrow_helper.py  switch.py
custom_components/battery_energy_trading/ai/: __init__.py  config.py  data_extractor.py  feature_engineering.py
custom_components/battery_energy_trading/ai/models/: __init__.py  base.py  decision_optimizer.py  load_forecaster.py  solar_predictor.py
custom_components/battery_energy_trading/ai/training/: __init__.py  trainer.py
custom_components/battery_energy_trading/translations/: de.json  en.json  no.json  sv.json
dashboards/: README.md  battery_energy_trading_dashboard.yaml
docs/: DASHBOARD_ENTITY_IDS.md  DOCUMENTATION_GUIDELINES.md  README.md  TERMINOLOGY.md
docs/api/: README.md
docs/development/: README.md  code-review-dashboard-entities.md  features.md  manual-testing-checklist.md  multi-peak-discharge-analysis.md  multi-peak-implementation-summary.md  refactoring-summary.md  release-process.md  testing.md
docs/development/history/: README.md  dashboard-completeness-audit-2025-10.md  dashboard-refactoring-2025-10.md  dependency-modernization-2025-10.md  documentation-audit-2025-10.md  documentation-cleanup-2025-10.md  modernization-summary-2025-10.md  refactoring-summary-2025-10.md  sungrow-entity-detection-2025-10.md  terminology-refactoring-2025-10.md  test-results-2025-10.md  testing-implementation-2025-10.md
docs/integrations/: README.md  sungrow-entity-reference.md  sungrow.md
docs/plans/: 2025-10-31-automatic-energy-trading.md  2025-12-02-ai-smart-battery-implementation.md  2025-12-02-ai-smart-battery-management-design.md  2025-12-02-codebase-coherence-review.md
docs/refactoring/: consolidate-base-entity-helpers.md
docs/user-guide/: README.md  automatic-trading-setup.md  dashboard-entity-reference.md  dashboard-setup.md
tests/: README.md  __init__.py  conftest.py  test_ai_config.py  test_ai_models_base.py  test_automation_helper.py  test_base_entity.py  test_binary_sensors.py  test_config_flow.py  test_coordinator.py  test_data_extractor.py  test_decision_optimizer.py  test_energy_optimizer.py  test_feature_engineering.py  test_init.py  test_integration_automation.py  test_load_forecaster.py  test_numbers.py  test_sensors.py  test_slot_combination.py  test_solar_predictor.py  test_sungrow_helper.py  test_switches.py  test_trainer.py
training_data/: modbus_sungrow.yaml
